Add Session Link Automation project image

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                 <div class="projects-list">
                     <div class="project-card">
-                        <div class="card-icon">⚙️</div>
+                        <img src="images/session-link-automation.png" alt="Session Link Automation" class="project-image">
                         <h4>Session Link Automation</h4>
                         <p>Power Automate system for Teams link generation.</p>
                         <div class="impact-badge">Days → Hours</div>
